--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo1
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username =postgres
-spring.datasource.password =Gopi@2002
+spring.datasource.password =password
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #The Hibernate dialect is responsible for generating the appropriate SQL statements based on the specific database you are using.
