--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -26,4 +26,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: venkateshhhh/crud:latest
+          tags: 9500663992/crud:latest
