--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=java-rds-test.czevyervva04.ap-south-1.rds.amazonaws.com
 spring.datasource.username =postgres
-spring.datasource.password =password
+spring.datasource.password =postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #The Hibernate dialect is responsible for generating the appropriate SQL statements based on the specific database you are using.
