--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=java-rds-test.czevyervva04.ap-south-1.rds.amazonaws.com
+spring.datasource.url=jdbc:postgresql://postgres.czevyervva04.ap-south-1.rds.amazonaws.com/postgres
 spring.datasource.username =postgres
 spring.datasource.password =postgres
 
